@@ -209,9 +209,9 @@ void ReloadEnvironment()
 		return std::make_pair(i, os::env::get_variable(i));
 	});
 
-	FOR(const auto& i, os::env::enum_strings_t<os::env::provider::block>())
+	FOR(const auto& i, (os::enum_strings_t<os::env::provider::block>()))
 	{
-		const auto Data = os::env::split(i);
+		const auto Data = os::env::split(i.data());
 		os::env::set_variable(Data.first, Data.second);
 	}
 
